--- a/index.html
+++ b/index.html
@@ -22,10 +22,19 @@
             <h1 class="logo"></h1>
             <center>
                 <h3 class="piscar">Projetos</h3>
+                <li>
                 <a button class="button button5" href="projeto_sesi/index.html">Sesi</a>
                 <a button class="button button5" href="webserver/index.html">Webserver</a>
                 <a button class="button button5" href="android/index.html">Android</a>
                 <a button class="button button5" href="pokemon/index.html">Pokemon</a>
+                <a button class="button button5" href="prime-video/index.html">Amazon Prime Video</a>
+                </li>
+                <a button class="button button5" href="dia-das-mulheres/index.html">Dia das Mulheres</a>
+                <a button class="button button5" href="pacote-office/index.html">Pacote Office</a>
+                <a button class="button button5" href="hortifruti/index.html">Filtros Hortifruti</a>
+                <a button class="button button5" href="sulivan/index.html">Desenhos Inkscape</a>
+                <a button class="button button5" href="fpoo/index.html">Java</a>
+                <a button class="button button5" href="cores/index.html">Bloco de cores</a>
             </center>
         </nav>
 
@@ -34,20 +43,15 @@
             <h3 class="piscar">Desenvolvedora web</h3>
         </div>
     </div>
-
-    <main>
 		
         <div class="city">
             <p>Meu nome é Alicie Fantinati Antunes, tenho 16 anos e sou natural de Sorocaba, São Paulo.</p>
             <p></p>
         </section>
-    </main>
-    </div>
+         </div>
            
-	<section id="Bv">
-	
 	</header>
-	<nav>
+	
 <p align="center"></p>
 
 </body>
