--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a button class="button button5" href="dia-das-mulheres/index.html">Dia das Mulheres</a>
                 <a button class="button button5" href="pacote-office/index.html">Pacote Office</a>
                 <a button class="button button5" href="hortifruti/index.html">Filtros Hortifruti</a>
-                <a button class="button button5" href="sulivan/index.html">Desenhos Inkscape</a>
+                <a button class="button button5" href="inkscape/index.html">Desenhos Inkscape</a>
                 <a button class="button button5" href="fpoo/index.html">Java</a>
                 <a button class="button button5" href="cores/index.html">Bloco de cores</a>
             </center>
