--- a/prime-video/index.html
+++ b/prime-video/index.html
@@ -9,12 +9,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bem-vindo(a) ao Prime Vídeos</title>
 </head>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="./css/style.css">
 
 <body>
     <!-- Menu -->
     <nav class="menu">
-        <a href=""><img class="logo" src="img/logo.svg" alt="logo do Amazon prime"></a>
+        <a href=""><img class="logo" src="./img/logo.svg" alt="logo do Amazon prime"></a>
 
         <ul>
             <li><a href="">Início</a></li>
@@ -23,7 +23,7 @@
             <li><a href="">categorias</a></li>
             <li><a href="">Minha área</a></li>
             <li class="user">
-                <a href="src/login.html"><i class="fa-solid fa-user fa-1x"></i></a>
+                <a href="./src/login.html"><i class="fa-solid fa-user fa-1x"></i></a>
             </li>
         </ul>
     </nav>
@@ -43,7 +43,7 @@
             </div>
 
             <!-- imagem que divide o botão -->
-            <img class="i" src="img/ou.png" alt="imagem com dois traços e um ou no meio">
+            <img class="i" src="./img/ou.png" alt="imagem com dois traços e um ou no meio">
 
             <!-- botão -->
             <div class="btn">
@@ -60,7 +60,7 @@
         <table>
             <thead>
                 <tr>
-                    <th><img class="logo" src="img/logo.svg" alt="logo Amazon prime"></th>
+                    <th><img class="logo" src="./img/logo.svg" alt="logo Amazon prime"></th>
                     <th>Prime Video</th>
                     <th>Prime standard</th>
                     <th>Prime Full</th>
