--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
                 <a button class="button button5" href="android/index.html">Android</a>
                 <a button class="button button5" href="pokemon/index.html">Pokemon</a>
                 <a button class="button button5" href="prime-video/index.html">Amazon Prime Video</a>
-                </li>
                 <a button class="button button5" href="dia-das-mulheres/index.html">Dia das Mulheres</a>
+            </li>
                 <a button class="button button5" href="pacote-office/index.html">Pacote Office</a>
                 <a button class="button button5" href="hortifruti/index.html">Filtros Hortifruti</a>
                 <a button class="button button5" href="inkscape/index.html">Desenhos Inkscape</a>
                 <a button class="button button5" href="fpoo/index.html">Java</a>
                 <a button class="button button5" href="cores/index.html">Bloco de cores</a>
+                <a button class="button button5" href="barbie/index.html">Barbie</a>
             </center>
         </nav>
 
