--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Portifólio</title> 
     <link rel="stylesheet" type="text/css" href="estilos1.css">
      
-	<body align="center" background="https://i.pinimg.com/564x/50/f7/24/50f72468ef91abaaaf2e72c6bb165e03.jpg">
+	<body align="center" background="https://img.freepik.com/fotos-premium/fundo-interior-da-sala-de-pano-de-fundo-roxo-liso-abstrato_1258-85452.jpg">
 
     <div class="border">
         <h1 class="piscar">Alicie Fantinati Antunes</h1>
