--- a/index.html
+++ b/index.html
@@ -22,21 +22,24 @@
             <h1 class="logo"></h1>
             <center>
                 <h3 class="piscar">Projetos</h3>
-                <li>
+                
                 <a button class="button button5" href="projeto_sesi/index.html">Sesi</a>
                 <a button class="button button5" href="webserver/index.html">Webserver</a>
                 <a button class="button button5" href="android/index.html">Android</a>
                 <a button class="button button5" href="pokemon/index.html">Pokemon</a>
                 <a button class="button button5" href="prime-video/index.html">Amazon Prime Video</a>
                 <a button class="button button5" href="dia-das-mulheres/index.html">Dia das Mulheres</a>
-            </li>
+                <a button class="button button5" href="site institucional/index.html">Sesi Matrícula</a>
+            <div>
                 <a button class="button button5" href="pacote-office/index.html">Pacote Office</a>
                 <a button class="button button5" href="hortifruti/index.html">Filtros Hortifruti</a>
                 <a button class="button button5" href="inkscape/index.html">Desenhos Inkscape</a>
                 <a button class="button button5" href="fpoo/index.html">Java</a>
                 <a button class="button button5" href="cores/index.html">Bloco de cores</a>
                 <a button class="button button5" href="barbie/index.html">Barbie</a>
-                <a button class="button button5" href="site institucional/index.html">Sesi Matrícula</a>
+                <a button class="button button5" href="projeto final spring/prjJogo/target/classes/static/index.html">Projeto final</a>
+                <a button class="button button5" href="dx3/index.html">DX3</a>
+            </div>
             </center>
         </nav>
 
@@ -51,7 +54,9 @@
             <p></p>
         </section>
          </div>
-           
+         <div>
+
+         </div>  
 	</header>
 	
 <p align="center"></p>
