--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                 <h3 class="piscar">Projetos</h3>
                 
                 <a button class="button button5" href="projeto_sesi/index.html">Sesi</a>
-                <a button class="button button5" href="webserver/index.html">Webserver</a>
+                <a button class="button button5" href="miso/index.html">Misogenia e misandria</a>
                 <a button class="button button5" href="android/index.html">Android</a>
                 <a button class="button button5" href="pokemon/index.html">Pokemon</a>
                 <a button class="button button5" href="prime-video/index.html">Amazon Prime Video</a>
                 <a button class="button button5" href="dia-das-mulheres/index.html">Dia das Mulheres</a>
-                <a button class="button button5" href="site institucional/index.html">Sesi Matrícula</a>
+                <a button class="button button5" href="site institucional/index.html">Site institucional</a>
             <div>
                 <a button class="button button5" href="pacote-office/index.html">Pacote Office</a>
                 <a button class="button button5" href="hortifruti/index.html">Filtros Hortifruti</a>
