--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h3 class="piscar">Projetos</h3>
                 
                 <a button class="button button5" href="projeto_sesi/index.html">Sesi</a>
-                <a button class="button button5" href="miso/index.html">Misogenia e misandria</a>
+                <a button class="button button5" href="miso/index.html">Misoginia e misandria</a>
                 <a button class="button button5" href="android/index.html">Android</a>
                 <a button class="button button5" href="pokemon/index.html">Pokemon</a>
                 <a button class="button button5" href="prime-video/index.html">Amazon Prime Video</a>
